application/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
